# netinfo

./: CMakeLists.txt  CMakePresets.json  README.md
netinfo/: CMakeLists.txt  main.c  network.c  network.h
